// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eta parsing 1 predictions 1 direction 1`] = `
<p>
  [
    {
        "line": "39",
        "stopName": "Old Finch Ave At Morningside Ave",
        "routeName": "Finch East",
        "etas": [
            {
                "id": 0,
                "second": "96",
                "busId": "3109",
                "branch": "39",
                "tripTag": "45227730",
                "epochTime": "1672201380997"
            },
            {
                "id": 1,
                "second": "1247",
                "busId": "3264",
                "branch": "39",
                "tripTag": "45227729",
                "epochTime": "1672202531994"
            },
            {
                "id": 2,
                "second": "2447",
                "busId": "9234",
                "branch": "39",
                "tripTag": "45227728",
                "epochTime": "1672203731994"
            }
        ],
        "stopTag": 12925
    }
]
</p>
`;

exports[`eta parsing 1 predictions 2 directions 1`] = `
<p>
  [
    {
        "line": "39",
        "stopName": "Finch Station",
        "routeName": "",
        "etas": [
            {
                "id": 0,
                "second": "611",
                "busId": "3124",
                "branch": "39A",
                "tripTag": "45227587",
                "epochTime": "1672202160000"
            },
            {
                "id": 1,
                "second": "1811",
                "busId": "3281",
                "branch": "39A",
                "tripTag": "45227586",
                "epochTime": "1672203360000"
            },
            {
                "id": 2,
                "second": "3011",
                "busId": "3234",
                "branch": "39A",
                "tripTag": "45227585",
                "epochTime": "1672204560000"
            }
        ],
        "stopTag": 14211
    },
    {
        "line": "39",
        "stopName": "Finch Station",
        "routeName": "",
        "etas": [
            {
                "id": 0,
                "second": "11",
                "busId": "9227",
                "branch": "39B",
                "tripTag": "45227579",
                "epochTime": "1672201560000"
            },
            {
                "id": 1,
                "second": "1211",
                "busId": "3283",
                "branch": "39B",
                "tripTag": "45227578",
                "epochTime": "1672202760000"
            },
            {
                "id": 2,
                "second": "2411",
                "busId": "3109",
                "branch": "39B",
                "tripTag": "45227577",
                "epochTime": "1672203960000"
            }
        ],
        "stopTag": 14211
    }
]
</p>
`;

exports[`eta parsing 2 predictions 2 direction 1`] = `
<p>
  [
    {
        "line": "39",
        "stopName": "Finch Ave East At Wilfred Ave",
        "routeName": "Finch East towards Neilson",
        "etas": [
            {
                "id": 0,
                "second": "338",
                "busId": "3124",
                "branch": "39A",
                "tripTag": "45227587",
                "epochTime": "1672202317976"
            },
            {
                "id": 1,
                "second": "1538",
                "busId": "3281",
                "branch": "39A",
                "tripTag": "45227586",
                "epochTime": "1672203517976"
            },
            {
                "id": 2,
                "second": "2738",
                "busId": "3234",
                "branch": "39A",
                "tripTag": "45227585",
                "epochTime": "1672204718036"
            }
        ],
        "stopTag": 8607
    },
    {
        "line": "39",
        "stopName": "Finch Ave East At Wilfred Ave",
        "routeName": "Finch East towards Old Finch and Morningview",
        "etas": [
            {
                "id": 0,
                "second": "447",
                "busId": "9227",
                "branch": "39B",
                "tripTag": "45227579",
                "epochTime": "1672202426996"
            },
            {
                "id": 1,
                "second": "1289",
                "busId": "3283",
                "branch": "39B",
                "tripTag": "45227578",
                "epochTime": "1672203268756"
            },
            {
                "id": 2,
                "second": "2489",
                "busId": "3109",
                "branch": "39B",
                "tripTag": "45227577",
                "epochTime": "1672204468756"
            }
        ],
        "stopTag": 8607
    }
]
</p>
`;

exports[`eta parsing empty result 1`] = `
<p>
  []
</p>
`;

exports[`eta parsing no ETA 1`] = `
<p>
  [
    {
        "line": "",
        "stopName": "480 Gordon Baker Rd",
        "routeName": "",
        "etas": [],
        "stopTag": 7900
    }
]
</p>
`;
